# kestrel

./: .gitignore  CMakeLists.txt  Makefile  README.md  TO_DO.txt  attack.c  attack.h  board.c  board.h  board_utils.c  board_utils.h  fen.c  fen.h  hashkeys.c  hashkeys.h  init.c  init.h  main.c  makemove.c  makemove.h  move.c  move.h  occupancy_mask.c  occupancy_mask.h  pieces.c  pieces.h  types.h  utils.c  utils.h
debug_utils/: debug_output.ods  debug_search_output.py  divide_perft_kestrel_vs_roce.py  move_gen_debug_analysis.py
scripts/: format_code.sh
src/: CMakeLists.txt  Makefile  attack.c  attack.h  bitboard.c  bitboard.h  board.c  board.h  board_utils.c  board_utils.h  ece  evaluate.c  evaluate.h  fen.c  fen.h  hashkeys.c  hashkeys.h  init.c  init.h  kestrel.c  main.c  makemove.c  makemove.h  mk_kestrel  move.c  move.h  move_gen.c  move_gen.h  move_gen_utils.c  move_gen_utils.h  occupancy_mask.c  occupancy_mask.h  occupancy_mask_gen.c  occupancy_mask_gen.h  pieces.c  pieces.h  pv_table.c  pv_table.h  search.c  search.h  (+7 more)
src/board/: bitboard.c  bitboard.h  board.c  board.h  board_new.c  board_new.h  board_utils.c  board_utils.h  occupancy_mask.c  occupancy_mask.h  occupancy_mask_gen.c  occupancy_mask_gen.h
src/core/: kestrel.h
src/fen/: fen.c  fen.h
src/test/: all_tests.c  all_tests.h  attack_test_fixture.c  board_test_fixture.c  move_test_fixture.c  piece_test_fixture.c
src/utils/: utils.c  utils.h
test/: CMakeLists.txt  Makefile  all_tests.c  all_tests.h  attack_test_fixture.c  attack_test_fixture.h  board_test_fixture.c  board_test_fixture.h  debug_analysis.py  mk_test_kestrel  move_test_fixture.c  move_test_fixture.h  occupancy_mask_test_fixture.c  occupancy_mask_test_fixture.h  performance_tests.c  performance_tests.h  piece_test_fixture.c  piece_test_fixture.h  search_tests.c  search_tests.h  seatest.c  seatest.h  utils_test_feature.c  utils_test_feature.h
